--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -7,9 +7,13 @@ $xs: 480px;
 $black: #000;
 $white: #FFF;
 
-
+$text_basic: #333;
+$text_selected: #EEE;
 $blue_light_1: #3D89B4;
 $bg: #F4EDDD;
+
+$nav: #333;
+$nav_selected: #EEE;
 
 $transition_nav: 1s ease-in-out;
 $transition_nav_menu: .5s ease-in-out;
