--- a/src/partials/Footer/footer.scss
+++ b/src/partials/Footer/footer.scss
@@ -1,1 +1,48 @@
 @use '/src/assets/css/variables' as *;
+
+
+footer {
+    width: 100%;
+    height: 60px;
+    background-color: $blue_light_1;
+
+    & .footer__content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+
+        & .footer__copyright {
+            color: $white;
+            font-size: 16px;
+        }
+
+        & .footer__social {
+            display: flex;
+            gap: 30px;
+            color: $white;
+            align-items: center;
+
+
+            & .social_links {
+                display: flex;
+                gap: 20px;
+                
+                & a {
+                    height: 30px;
+                    width: auto;
+
+                    & > img {
+                        height: 100%;
+                        width: 100%;
+                        object-fit: contain;
+                    }
+                }
+            }
+        }
+
+
+    }
+}
