--- a/src/pages/Portfolio/portfolio.scss
+++ b/src/pages/Portfolio/portfolio.scss
@@ -29,6 +29,7 @@ section.portfolio {
 
     & .portfolio__gallery {
         margin-top: 80px;
+        margin-bottom: 80px;
         width: 100%;
         border: 1px solid red;
     }
