--- a/src/components/Proscons/proscons.scss
+++ b/src/components/Proscons/proscons.scss
@@ -3,10 +3,10 @@
     width: 100%;
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     & > ul {
-        width: 47%;
+        width: 40%;
         font-size: 1.2rem;
     }
 
@@ -14,6 +14,7 @@
         & li {
             position: relative;
             margin-left: 25px;
+            margin-top: 7px;
             &::before {
                 position: absolute;
                 left: -25px;
