--- a/src/components/TechItem/tech-item.scss
+++ b/src/components/TechItem/tech-item.scss
@@ -31,3 +31,33 @@
 
     }
 }
+
+/*
+        & .splide {
+            height: 100%;
+            
+            & .splide__track {
+                height: 100%;
+    
+                border: 2px solid red;
+                & > ul {
+                    
+                    &  > li {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+        
+                        & .splide__slide-container {
+                            height: 100%;
+                            
+                            & > img {
+                                cursor: zoom-in;
+                                height: 100%;
+                                width: 100%;
+                                object-fit: contain;
+                            }
+                        }
+                    }
+                }
+            }
+        }*/
