--- a/src/components/ThemeSwitcher/themeSwitcher.scss
+++ b/src/components/ThemeSwitcher/themeSwitcher.scss
@@ -1,7 +1,69 @@
+@use '/src/assets/css/variables' as *;
+
 .theme-switcher {
-    position: absolute;
-    top: 0px;
-    right: 0;
-    border: 2px solid red;
-    z-index: 5000;
+    cursor: pointer;
+    position: fixed;
+    top: 120px;
+    right: 20px;
+    //border: 2px solid red;
+    z-index: 5100;
+    height: 40px;
+    width: 40px;
+    background-color: $theme-sw-blue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 50%;
+    //filter: drop-shadow(0px 0px 6px $theme-sw-blue);
+    
+
+    & > label {
+        height: 100%;
+        width: 100%;
+        display: block;
+        position: absolute;
+        
+        & > input {
+            visibility: hidden;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    & > .sun-moon {
+        width: 50%;
+        height: 50%;
+        border-radius: 50%;
+        background-color: $theme-sw-sun;//$theme-sw-gold#f3de25;
+        position: relative;
+        transition: background-color $transition_nav_menu;
+
+        & > .shadow {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: $theme-sw-blue;    
+            position: absolute;
+            left: -100%;
+            top: -100%;
+            transition: $transition_nav_menu;
+        }
+    }
+
+}
+
+body.dark {
+    .theme-switcher {
+   
+        & > .sun-moon {
+            background-color: #f7f7f7;
+
+            & > .shadow {
+                left: -20%;
+                top: -10%;
+            }
+        }
+    
+    }
 }
