--- a/src/partials/Footer/footer.scss
+++ b/src/partials/Footer/footer.scss
@@ -4,7 +4,7 @@
 footer {
     width: 100%;
     height: 60px;
-    background-color: $blue_light_1;
+    background-color: var(--main);
 
     & .footer__content {
         width: 100%;
@@ -15,15 +15,21 @@ footer {
 
 
         & .footer__copyright {
-            color: $white;
-            font-size: 16px;
+            color: var(--text_contrast);
+            font-size: 18px;
+            font-weight: 700;
         }
 
         & .footer__social {
             display: flex;
             gap: 30px;
-            color: $white;
             align-items: center;
+            
+            & > span {
+                font-size: 18px;
+                color: var(--text_contrast);
+                font-weight: 700;
+            }
 
 
             & .social_links {
