--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -20,35 +20,49 @@ html,body, h1,h2,h3,h4,h5,h6,p,span,div,nav,ul,li {
 body {
     width: 100%;
     background-color: var(--bg);
+    transition: background-color $transition-theme;
 }
 
 h1 {
     font-size: 3rem;
     text-align: center;
+    transition: color $transition_theme;
 }
 
 h2 {
     font-size: 2rem;
+    transition: color $transition_theme;
 }
 
 h3 {
     font-size: 1.5rem;
+    transition: color $transition_theme;
+}
+
+span {
+    transition: color $transition_theme;
+    color: var(--text);
 }
 
 ul {
     list-style-type: none;
+
+    & > li {
+        transition: color $transition_theme;
+    }
 } 
 
 
 a {
     text-decoration: none;
-    color: black;
+    color: var(--text);
+    transition: color $transition_theme;
 }
 
 p {
     font-size: 1.2rem;
     text-indent: 3rem;
-
+    transition: color $transition_theme;
 }
 
 
@@ -61,7 +75,7 @@ p {
     height: 100%;
     padding-left: 20px;
     padding-right: 20px;
-    color: $text_basic;
+    color: var(--text);
 }
 
 .container_page {
