--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -22,16 +22,18 @@ $nav_selected: #EEE;
 
 $transition_nav: 1s ease-in-out;
 $transition_nav_menu: .5s ease-in-out;
-
+$transition-theme: 1s;
 
 body {
     --main: #409BCE;
+    --main_vv: #286181;
     --bg: #EBEBEB;
     --text: #1F2833;
     --text_contrast: #F3F3F3;
  }
  body.dark {
     --main: #286181;
+    --main_vv: #409BCE;
     --bg: #1F2833;
     --text: #EBEBEB;
     --text_contrast: #1F2833;
