--- a/src/components/News/news.scss
+++ b/src/components/News/news.scss
@@ -3,8 +3,84 @@
 
 .news {
     width: 100%;
-    border: 1px solid red;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    
+    border: 1px solid var(--main);
+    border-radius: 5px;
+    padding-bottom: 20px;
+    max-width: 22%;
+    min-width: 250px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    //background-color: rgba(#286181, 0.1);
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+
+    & > img {
+       width: auto;
+       height: 230px;
+       object-fit: fill;
+    }
+
+    & > div {
+        margin-top: 20px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        h3 {
+            align-self: flex-start;
+            color: var(--main_vv);
+            font-size: 24px;
+            //font-family: 'LexendDeca';
+            font-weight: 700;
+        }
+
+        span {
+            font-size: 14px;
+            //font-family: 'LexendDeca';
+            font-weight: 600;
+            white-space: nowrap;
+            //align-self: flex-start;
+        }
+
+
+    }
+
+    p {
+        margin-top: 20px;
+        text-indent: 0;
+        font-size: 17px;
+        font-weight: 500;
+        //font-family: 'LexendDeca';
+        margin-bottom: 20px;
+    }
+
+    & > button {
+        align-self: flex-start;
+        margin-top: auto;   
+        padding: 8px 20px;
+        border-radius: 10px;
+        color: var(--text);
+        background-color: var(--main);
+        //font-family: 'LexendDeca';
+        font-size: 18px;
+        font-weight: 700;
+        border: none;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+
+        & > svg  {
+            max-height: 80%;
+            margin-left: 20px;
+            fill: var(--text);
+        }
+    }
+
+
+
+
 }
