--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -8,7 +8,7 @@
     }
 
 
-    & p {
+    & > p {
         &:first-of-type {
             margin-top: 30px;
         }
@@ -26,7 +26,7 @@
 
 
     & h2 {
-        margin-top: 50px;
+        margin-top: 80px;
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
     }
