--- a/src/partials/Footer/footer.scss
+++ b/src/partials/Footer/footer.scss
@@ -5,6 +5,7 @@ footer {
     width: 100%;
     height: 60px;
     background-color: var(--main);
+    transition: background-color $transition-theme;
 
     & .footer__content {
         width: 100%;
@@ -16,6 +17,7 @@ footer {
 
         & .footer__copyright {
             color: var(--text_contrast);
+            transition: color $transition-theme;
             font-size: 18px;
             font-weight: 700;
         }
@@ -28,6 +30,7 @@ footer {
             & > span {
                 font-size: 18px;
                 color: var(--text_contrast);
+                transition: color $transition-theme;
                 font-weight: 700;
             }
 
