--- a/src/partials/Header/header.scss
+++ b/src/partials/Header/header.scss
@@ -4,6 +4,7 @@ header {
     width: 100%;
     height: 80px;
     background-color: var(--main);
+    transition: background-color $transition-theme;
     position: sticky;
     top: 0;
     z-index: 5000;
