--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -79,7 +79,8 @@
                     //padding-left: 5px;
                     //padding-right: 5px;
                     transition: 1s;
-                    color: $nav;
+                    color: var(--text);
+                    transition: color $transition-theme;
                     text-transform: uppercase;
                     transition: $transition_nav_menu;
                     display: block;
@@ -108,11 +109,14 @@
 
                     &:hover {
                         color: var(--text_contrast);
+                        transition: color $transition-theme;
+
                         //transform: translateY(12px);
                     }
 
                     &.selected {
                         color: var(--text_contrast);
+                        transition: color $transition-theme;
                     }
                 }
             }
@@ -138,7 +142,9 @@
                     position: absolute;
                     width: 100%;
                     height: 70%;
-                    background-color: $blue_light_1;
+                    background-color: var(--main);
+                    transition: background-color $transition-theme;
+
                 }
                 
                 & > label {
