--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -23,6 +23,8 @@ $nav_selected: #EEE;
 $transition_nav: 1s ease-in-out;
 $transition_nav_menu: .5s ease-in-out;
 $transition-theme: 1s;
+$light: #EBEBEB;
+$dark: #286181;
 
 body {
     --main: #409BCE;
