--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -53,7 +53,7 @@
             position: absolute;
             content: '';
             width: 10%;
-            border-bottom: 2px solid $blue_light_1;
+            border-bottom: 2px solid var(--main_vv);
             bottom: -75px;
             left: 50%;
             transform: translate(-50%, 0);
@@ -62,6 +62,7 @@
         & h3 {
             margin-top: 30px;
             text-align: center;
+            color: var(--main_vv);
         }
 
         & p {
