tg multiple files adding added

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -9,7 +9,7 @@ $white: #FFF;
 $theme-sw-blue: rgb(22, 100, 216);
 $theme-sw-sun: gold;
 $theme-sw-moon: #f7f7f7;;
-
+$color_danger: #ffa0a0;
 
 
 $text_basic: #333;
