--- a/src/pages/Order/order.scss
+++ b/src/pages/Order/order.scss
@@ -54,6 +54,7 @@
                         width: 100%;
                         border-radius: 4px;
                         border: none;
+                        transition: background-color $transition-theme;
                     }
 
                     & textarea {
@@ -67,6 +68,7 @@
                         border: none;
                         resize: vertical;
                         height: 8rem;
+                        transition: background-color $transition-theme;
                     }
 
                     &.files {
@@ -76,12 +78,13 @@
 
 
                         & .drop-area {
+                            position: relative;
                             margin-top: 5px;
                             width: 100%;
                             display: flex;
                             flex-direction: column;
                             align-items: center;
-                            padding-bottom: 10px;
+                            padding-bottom: 20px;
                             padding-top: 30px;
                             border-radius: 4px;
                             background-color: var(--main_vv);
@@ -118,6 +121,58 @@
                                 }
                             }
 
+                            & > .preview-gallery {
+                                display: flex;
+                                flex-wrap: wrap;
+                                padding: 0 20px;
+                                gap: 20px;
+                                margin-top: 20px;
+                                //border: 1px solid red;
+                                justify-content: center;
+                                max-height: 500px;
+                                overflow-y: auto;
+
+                                & > div {
+                                    display: flex;
+                                    flex-direction: column;
+                                    align-items: center;
+                                    width: 100px;
+                                    
+                                    & > div {
+                                        height: 50px;
+                                        width: 100%;
+                                        
+                                        & > img {
+                                            width: 100%;
+                                            height: 100%;
+                                            object-fit: contain;
+                                        }
+
+                                    }
+
+                                    & > span {
+                                        margin-top: 10px;
+                                        font-size: 14px;
+                                        text-align: center;
+                                        color: $light;
+                                    }
+                                }
+
+                            }
+
+                            & > .drop-area__cleaner {
+                                position: absolute;
+                                right: 15px;
+                                top: 15px;
+                                height: 20px;
+                                width: 20px;
+                                cursor: pointer;
+                                
+                                & > img {
+                                    fill: white;
+                                }
+                            }
+
                             &.active {
                                 border: 2px dotted $light;
                                 box-shadow: 0px 0px 20px $light;
@@ -126,11 +181,20 @@
                         }
                     }
 
+
+
+
+
                     &.error {
                         & > label {
-                            color: red;
+                            color: $color_danger;
+                        }
+
+                        & > input, textarea {
+                            background-color: $color_danger;
                         }
                     }
+                    
 
                 }
 
