--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -32,6 +32,7 @@ body {
     --bg: #EBEBEB;
     --text: #1F2833;
     --text_contrast: #F3F3F3;
+    --inputs-bg: #EBEBEB;
  }
  body.dark {
     --main: #286181;
@@ -39,6 +40,7 @@ body {
     --bg: #1F2833;
     --text: #EBEBEB;
     --text_contrast: #1F2833;
+    --inputs-bg: #d6e3e6;
  }
 
 
