--- a/src/components/ThemeSwitcher/themeSwitcher.scss
+++ b/src/components/ThemeSwitcher/themeSwitcher.scss
@@ -1,69 +1,37 @@
-@use '/src/assets/css/variables' as *;
+@use "sass:map";
+@use "/src/assets/css/variables" as *;
+//@import "../../assets/css/base.scss";
 
-.theme-switcher {
-    cursor: pointer;
+.theme-switcher__container {
     position: fixed;
-    top: 120px;
     right: 20px;
-    //border: 2px solid red;
-    z-index: 5100;
+    top: 100px;
+    width: 70px;
     height: 40px;
-    width: 40px;
-    background-color: $theme-sw-blue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     overflow: hidden;
-    border-radius: 50%;
-    //filter: drop-shadow(0px 0px 6px $theme-sw-blue);
-    
+    z-index: 5500;
 
-    & > label {
-        height: 100%;
-        width: 100%;
-        display: block;
+    @include respond-to(sm) {
+        transform: scale(0.85);
+        top: 20px;
+        right: 10px;
+    }
+
+    @include respond-to(xs) {
+        transform: scale(0.7);
+        top: 10px;
+        right: 0px;
+    }
+
+    & input {
+        visibility: hidden;
         position: absolute;
-        
-        & > input {
-            visibility: hidden;
-            height: 100%;
-            width: 100%;
-        }
     }
 
-    & > .sun-moon {
-        width: 50%;
-        height: 50%;
-        border-radius: 50%;
-        background-color: $theme-sw-sun;//$theme-sw-gold#f3de25;
-        position: relative;
-        transition: background-color $transition_nav_menu;
-
-        & > .shadow {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            background-color: $theme-sw-blue;    
-            position: absolute;
-            left: -100%;
-            top: -100%;
-            transition: $transition_nav_menu;
-        }
-    }
-
-}
-
-body.dark {
-    .theme-switcher {
-   
-        & > .sun-moon {
-            background-color: #f7f7f7;
-
-            & > .shadow {
-                left: -20%;
-                top: -10%;
-            }
-        }
-    
+    & > .theme-switcher {
+        width: 100%;
+        height: 100%;
     }
 }
+
+
