--- a/src/pages/Tech/tech.scss
+++ b/src/pages/Tech/tech.scss
@@ -1,20 +1,24 @@
 @use '/src/assets/css/variables' as *;
 
+section.tech {
+    background-color: var(--bg);
+    transition: background-color $transition-theme;
 
-.tech {
-    width: 100%;
-
-    & .tech__container {
+    & .tech {
         width: 100%;
-        margin-top: 30px;
-
-		& .tech__item {
-			margin-top: 60px;
-
-            &:first-child {
-                margin-top: 0;
-            }
-		}
-    }
     
+        & .tech__container {
+            width: 100%;
+            margin-top: 30px;
+    
+            & .tech__item {
+                margin-top: 60px;
+    
+                &:first-child {
+                    margin-top: 0;
+                }
+            }
+        }
+        
+    }
 }
