--- a/src/partials/Header/header.scss
+++ b/src/partials/Header/header.scss
@@ -8,6 +8,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 5000;
+    border-bottom: 1px solid #333;
     
     & .header__content {
         display: flex;
