--- a/src/pages/Order/order.scss
+++ b/src/pages/Order/order.scss
@@ -29,7 +29,7 @@ section.order {
     
     
             .order__container {
-                width: 70%;
+                width: 80%;
                 padding: 30px 30px;
                 //padding-left: 50px;
                 margin: 40px 0;
@@ -39,7 +39,7 @@ section.order {
                 box-shadow: 5px 4px 6px 2px rgba(#000, 0.25);
 
                 @include respond-to(md) {
-                    width: 85%;
+                    width: 90%;
                 }
     
                 @include respond-to(sm) {
@@ -57,182 +57,208 @@ section.order {
                     width: 100%;
                     display: flex;
                     align-items: stretch;
+                    justify-content: space-between;
 
                     & .inputs-block {
-                        width: 60%;
+                        width: 50%;
+                        display: flex;
+                        flex-direction: column;
+                    }
 
-                        & .input-block {
-                            width: 100%;
-                            margin-top: 15px;
-                            
-                            @include respond-to(sm) {
-                                margin-top: 25px;
-                            }
-        
-        
-                            & label {
-                                display: block;
-                                font-size: 16px;
-                                transition: color $transition_theme;
-                                font-weight: 700;
-                            }
-        
-                            & input {
-                                margin-top: 3px;
-                                font-size: 20px;
-                                color: black;
-                                font-weight: 600;
-                                padding: 5px 10px;
-                                width: 100%;
-                                border-radius: 4px;
-                                border: none;
-                                background-color: var(--inputs-bg);
-                                transition: background-color $transition-theme;
-                            }
-        
-                            & textarea {
-                                margin-top: 3px;
-                                font-size: 20px;
-                                color: black;
-                                font-weight: 600;
-                                padding: 5px 10px;
-                                width: 100%;
-                                border-radius: 4px;
-                                border: none;
-                                resize: vertical;
-                                height: 8rem;
-                                background-color: var(--inputs-bg);
-                                transition: background-color $transition-theme;
-                            }
-        
-                            &.files {
-                                & input[type="file"] {
-                                    display: none;
-                                }
-        
-        
-                                & .drop-area {
-                                    position: relative;
-                                    margin-top: 5px;
-                                    width: 100%;
-                                    display: flex;
-                                    flex-direction: column;
-                                    align-items: center;
-                                    padding-bottom: 20px;
-                                    padding-top: 30px;
-                                    border-radius: 4px;
-                                    background-color: var(--main_vv);
-                                    transition: background-color $transition_theme;
-        
-                                    & > svg {
-                                        fill: $light;
-                                        transform: scale(1.3);
-                                        margin-bottom: 10px;
-                                    }
-        
-                                    & > .link__container {
-                                        display: flex;
-                                        justify-content: center;
-                                        align-items: center;
-        
-                                        @include respond-to(md) {
-                                            flex-direction: column;
-                                        }
-        
-                                        & label:first-child {
-                                            display: inline;
-                                            text-decoration: underline;
-                                            cursor: pointer;
-                                            color: $light;
-                                        }
-            
-                                        & span {
-                                            color: $light;
-                                            margin-left: .5rem;
-                                            @include respond-to(sm) {
-                                                display: none;
-                                            }
-                                        }
-                                    }
-        
-                                    & > .preview-gallery {
-                                        display: flex;
-                                        flex-wrap: wrap;
-                                        padding: 0 20px;
-                                        gap: 20px;
-                                        margin-top: 20px;
-                                        //border: 1px solid red;
-                                        justify-content: center;
-                                        max-height: 500px;
-                                        overflow-y: auto;
-        
-                                        & > div {
-                                            display: flex;
-                                            flex-direction: column;
-                                            align-items: center;
-                                            width: 100px;
-                                            
-                                            & > div {
-                                                height: 100px;
-                                                width: 100%;
-                                                
-                                                & > img {
-                                                    width: 100%;
-                                                    height: 100%;
-                                                    object-fit: cover;
-                                                }
-        
-                                            }
-        
-                                            & > span {
-                                                margin-top: 10px;
-                                                font-size: 14px;
-                                                text-align: center;
-                                                color: $light;
-                                            }
-                                        }
-        
-                                    }
-        
-                                    & > .drop-area__cleaner {
-                                        position: absolute;
-                                        right: 15px;
-                                        top: 15px;
-                                        height: 20px;
-                                        width: 20px;
-                                        cursor: pointer;
-                                        
-                                        & > img {
-                                            fill: white;
-                                        }
-                                    }
-        
-                                    &.active {
-                                        border: 2px dotted $light;
-                                        box-shadow: 0px 0px 20px $light;
-                                    }
-            
-                                }
-                            }
-        
-        
-        
-        
-        
-                            &.error {
-                                & > label {
-                                    color: $color_danger;
-                                }
-        
-                                & > input, textarea {
-                                    background-color: $color_danger;
-                                }
-                            }
-                            
-        
+
+                    & .input-block {
+                        width: 100%;
+                        //margin-top: 15px;
+                        padding-top: 15px;
+                        
+                        @include respond-to(sm) {
+                            margin-top: 25px;
+                        }
+
+                        &.message-block {
+                            flex-grow: 1;
+                            display: flex;
+                            flex-direction: column;
                         }
         
+        
+                        & label {
+                            display: block;
+                            font-size: 16px;
+                            transition: color $transition_theme;
+                            font-weight: 700;
+                        }
+        
+                        & input {
+                            margin-top: 3px;
+                            font-size: 20px;
+                            color: black;
+                            font-weight: 600;
+                            padding: 5px 10px;
+                            width: 100%;
+                            border-radius: 4px;
+                            border: none;
+                            background-color: var(--inputs-bg);
+                            transition: background-color $transition-theme;
+                        }
+        
+                        & textarea {
+                            flex-grow: 1;
+                            margin-top: 3px;
+                            font-size: 20px;
+                            color: black;
+                            font-weight: 600;
+                            padding: 5px 10px;
+                            width: 100%;
+                            border-radius: 4px;
+                            border: none;
+                            resize: vertical;
+                            height: 8rem;
+                            background-color: var(--inputs-bg);
+                            transition: background-color $transition-theme;
+                            vertical-align: bottom;
+                        }
+           
+        
+        
+        
+                        &.error {
+                            & > label {
+                                color: $color_danger;
+                            }
+        
+                            & > input, textarea {
+                                background-color: $color_danger;
+                            }
+                        }
                         
+        
+                    }
+
+        
+                        
+                    
+
+
+                    & > .files-block {
+                        width: 45%;
+                        
+                        & .input-block.files {
+                            height: 100%;
+                            display: flex;
+                            flex-direction: column;
+
+                            & input[type="file"] {
+                                display: none;
+                            }
+        
+        
+                            & .drop-area {
+                                flex-grow: 1;
+                                position: relative;
+                                margin-top: 3px;
+                                width: 100%;
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                justify-content: center;
+                                padding-bottom: 20px;
+                                padding-top: 30px;
+                                border-radius: 4px;
+                                background-color: var(--main_vv);
+                                transition: background-color $transition_theme;
+        
+                                & > svg {
+                                    fill: $light;
+                                    transform: scale(1.3);
+                                    margin-bottom: 10px;
+                                }
+        
+                                & > .link__container {
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+        
+                                    @include respond-to(md) {
+                                        flex-direction: column;
+                                    }
+        
+                                    & label:first-child {
+                                        display: inline;
+                                        text-decoration: underline;
+                                        cursor: pointer;
+                                        color: $light;
+                                    }
+            
+                                    & span {
+                                        color: $light;
+                                        margin-left: .5rem;
+                                        @include respond-to(sm) {
+                                            display: none;
+                                        }
+                                    }
+                                }
+        
+                                & > .preview-gallery {
+                                    display: flex;
+                                    flex-wrap: wrap;
+                                    padding: 0 20px;
+                                    gap: 20px;
+                                    margin-top: 20px;
+                                    //border: 1px solid red;
+                                    justify-content: center;
+                                    max-height: 500px;
+                                    overflow-y: auto;
+        
+                                    & > div {
+                                        display: flex;
+                                        flex-direction: column;
+                                        align-items: center;
+                                        width: 100px;
+                                        
+                                        & > div {
+                                            height: 100px;
+                                            width: 100%;
+                                            
+                                            & > img {
+                                                width: 100%;
+                                                height: 100%;
+                                                object-fit: cover;
+                                            }
+        
+                                        }
+        
+                                        & > span {
+                                            margin-top: 10px;
+                                            font-size: 14px;
+                                            text-align: center;
+                                            color: $light;
+                                        }
+                                    }
+        
+                                }
+        
+                                & > .drop-area__cleaner {
+                                    position: absolute;
+                                    right: 15px;
+                                    top: 15px;
+                                    height: 20px;
+                                    width: 20px;
+                                    cursor: pointer;
+                                    
+                                    & > img {
+                                        fill: white;
+                                    }
+                                }
+        
+                                &.active {
+                                    border: 2px dotted $light;
+                                    box-shadow: 0px 0px 20px $light;
+                                }
+            
+                            }
+        
+                        }
                     }
                 }
 
